--- a/addons/crm/wizard/crm_lead_to_opportunity_views.xml
+++ b/addons/crm/wizard/crm_lead_to_opportunity_views.xml
@@ -20,7 +20,8 @@
                             <field name="name"/>
                             <field name="type"/>
                             <field name="contact_name"/>
-                            <field name="country_id" invisible="context.get('invisible_country', True)" options="{'no_open': True, 'no_create': True}"/>
+                            <field name="country_id" invisible="context.get('invisible_country', True)"
+                                   options="{'no_open': True, 'no_create': True}"/>
                             <field name="email_from"/>
                             <field name="stage_id"/>
                             <field name="user_id"/>
@@ -31,11 +32,14 @@
                 <group name="action" attrs="{'invisible': [('name', '!=', 'convert')]}" string="Customer" col="1">
                     <field name="action" nolabel="1" widget="radio"/>
                     <group col="2">
-                        <field name="partner_id" widget="res_partner_many2one" context="{'res_partner_search_mode': 'customer', 'show_vat': True}" attrs="{'required': [('action', '=', 'exist')], 'invisible':[('action','!=','exist')]}"/>
+                        <field name="partner_id" widget="res_partner_many2one"
+                               context="{'res_partner_search_mode': 'customer', 'show_vat': True, 'search_default_type_company':True}"
+                               attrs="{'required': [('action', '=', 'exist')], 'invisible':[('action','!=','exist')]}"/>
                     </group>
                 </group>
                 <footer>
-                    <button name="action_apply" string="Create Opportunity" type="object" class="btn-primary" data-hotkey="q"/>
+                    <button name="action_apply" string="Create Opportunity" type="object" class="btn-primary"
+                            data-hotkey="q"/>
                     <button string="Cancel" class="btn-secondary" special="cancel" data-hotkey="z"/>
                 </footer>
             </form>
