--- a/custom/crm_discount/views/crm_customer_billing_config_view.xml
+++ b/custom/crm_discount/views/crm_customer_billing_config_view.xml
@@ -12,8 +12,8 @@
                 <sheet>
                     <group name="group_top">
                         <group name="group_left">
-                            <field name="company_id">Company</field>
-                            <field name="account_biz_id">Account Biz ID</field>
+                            <field name="company_id" required="1">Company</field>
+                            <field name="account_biz_id" force_save="1" attrs="{'readonly':True}">Account Biz ID</field>
                         </group>
                         <group name="group-right">
                             <field name="month_upper_limit">Month upper limit</field>
